--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "graphql-yoga": "^1.14.12"
+    "graphql-yoga": "^1.14.12",
+    "node-fetch": "^2.2.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node index.js"
